# tools-aigc

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.dev  README.md  alembic.ini  docker-compose.yml  main.py  pg_tables_and_data.sql  pyproject.toml  requirements.txt
app/: __init__.py
app/api/: __init__.py
app/api/endpoints/: __init__.py  auth.py  tools.py
app/auth/: __init__.py  jwt.py  password.py
app/core/: cache.py  config.py  formatter.py  llm_service.py  message_processor.py  session.py  streaming.py
app/db/: __init__.py  base.py  session.py
app/db/models/: __init__.py  api_log.py  user.py
app/middleware/: __init__.py  api_log.py  auth.py
app/schemas/: __init__.py  auth.py  tools.py
app/tools/: __init__.py  base.py  echo.py  http_request.py  weather.py
docs/: agent_patterns.md  architecture.md  streaming.md
examples/: client_example.py  custom_tool_example.py  enhanced_tool_calls_example.py  stream_tool_calls_example.py
logs/: api_logs.jsonl
migrations/: README  env.py
migrations/versions/: a6ed2d419cc7_初始化数据库结构.py
scripts/: init_db.py  init_db.sh
tests/: test_tools.py
tests/call/: weather.py
tests/tools/: snake-fast.py  snake.py
